--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -191,7 +191,7 @@
     <header>
         <div class="container header-container">
             <a href="index.html">
-                <img src="images/logo.png" alt="Tgen Robotics Hub Logo" class="logo">
+                <img src="images/logo.svg" alt="Tgen Robotics Hub Logo" class="logo">
             </a>
             <nav class="nav-links">
                 <a href="encyclopedia.html" class="active">Encyclopedia</a>
