add logo to admin-robot-management.html

--- a/admin-robot-management.html
+++ b/admin-robot-management.html
@@ -570,7 +570,7 @@
     <!-- Sidebar -->
     <div class="sidebar">
         <div class="sidebar-header">
-            <img src="images/logo-small.png" alt="Tgen Robotics Hub" class="sidebar-logo">
+            <img src="images/logo.svg" alt="Tgen Robotics Hub Logo" class="logo">
         </div>
         
         <ul class="sidebar-menu">
