--- a/admin-robot-management.html
+++ b/admin-robot-management.html
@@ -988,5 +988,6 @@
     <!-- JavaScript -->
     <script src="js/admin.js"></script>
     <script src="js/robot-management.js"></script>
+    <script src="js/data-manager.js"></script>
 </body>
 </html>
