--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -339,6 +339,7 @@
 
     <!-- Scripts -->
     <script src="js/main.js"></script>
+    <script src="js/data-manager.js"></script>
     <script src="js/encyclopedia.js"></script>
 </body>
 </html>
