--- a/robot-detail.html
+++ b/robot-detail.html
@@ -939,6 +939,7 @@
 
     <!-- Scripts -->
     <script src="js/main.js"></script>
+    <script src="js/data-manager.js"></script>
     <script src="js/robot-detail.js"></script>
 </body>
 </html>
