--- a/admin-robot-management.html
+++ b/admin-robot-management.html
@@ -987,7 +987,9 @@
 
     <!-- JavaScript -->
     <script src="js/admin.js"></script>
-    <script src="js/robot-management.js"></script>
     <script src="js/data-manager.js"></script>
+    <script src="js/file-uploader.js"></script>
+    <script src="js/robot-admin-connector.js"></script>
+    <script src="js/robot-management.js"></script>
 </body>
 </html>
