--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -538,6 +538,21 @@
                     <span class="sidebar-menu-text">Settings</span>
                 </a>
             </li>
+                <div class="sidebar-divider"></div>
+                <div class="sidebar-section-title">Public Site</div>
+
+            <li>
+                <a href="index.html">
+                    <i class="fas fa-home sidebar-menu-icon"></i>
+                    <span class="sidebar-menu-text">Home</span>
+                </a>
+            </li>
+            <li>
+                <a href="encyclopedia.html">
+                    <i class="fas fa-book sidebar-menu-icon"></i>
+                    <span class="sidebar-menu-text">Encyclopedia</span>
+                </a>
+            </li>
             <li>
                 <a href="index.html">
                     <span class="sidebar-menu-icon">🌐</span>
