--- a/admin-robot-management.html
+++ b/admin-robot-management.html
@@ -639,6 +639,7 @@
 
         <div class="robot-actions">
             <button class="btn btn-primary" id="add-robot-btn">Add New Robot</button>
+            <a href="encyclopedia.html" class="btn" style="background: rgba(32, 227, 178, 0.1); color: var(--primary);">View Encyclopedia</a>
         </div>
 
         <table class="robot-table">
