--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -672,10 +672,10 @@
                         <td>Published</td>
                         <td>4,218</td>
                         <td class="robot-actions-cell">
-                            <div class="action-icon edit-icon">✏️</div>
-                            <div class="action-icon delete-icon">🗑️</div>
+                            <a href="#" class="action-icon edit-icon" title="Edit"><i class="fas fa-edit"></i></a>
+                            <a href="robot-detail.html?slug=spot" class="action-icon view-icon" title="View in Encyclopedia"><i class="fas fa-eye"></i></a>
+                            <a href="#" class="action-icon delete-icon" title="Delete"><i class="fas fa-trash-alt"></i></a>
                         </td>
-                    </tr>
                     <tr>
                         <td><img src="https://placehold.co/60x40/1a1a1a/20e3b2?text=Waymo" alt="Waymo" class="robot-thumbnail"></td>
                         <td>Self-Driving Car</td>
@@ -684,8 +684,9 @@
                         <td>Published</td>
                         <td>3,156</td>
                         <td class="robot-actions-cell">
-                            <div class="action-icon edit-icon">✏️</div>
-                            <div class="action-icon delete-icon">🗑️</div>
+                            <a href="#" class="action-icon edit-icon" title="Edit"><i class="fas fa-edit"></i></a>
+                            <a href="robot-detail.html?slug=spot" class="action-icon view-icon" title="View in Encyclopedia"><i class="fas fa-eye"></i></a>
+                            <a href="#" class="action-icon delete-icon" title="Delete"><i class="fas fa-trash-alt"></i></a>
                         </td>
                     </tr>
                     <tr>
@@ -696,8 +697,9 @@
                         <td>Published</td>
                         <td>4,987</td>
                         <td class="robot-actions-cell">
-                            <div class="action-icon edit-icon">✏️</div>
-                            <div class="action-icon delete-icon">🗑️</div>
+                            <a href="#" class="action-icon edit-icon" title="Edit"><i class="fas fa-edit"></i></a>
+                            <a href="robot-detail.html?slug=spot" class="action-icon view-icon" title="View in Encyclopedia"><i class="fas fa-eye"></i></a>
+                            <a href="#" class="action-icon delete-icon" title="Delete"><i class="fas fa-trash-alt"></i></a>
                         </td>
                     </tr>
                     <tr>
@@ -708,8 +710,9 @@
                         <td>Draft</td>
                         <td>0</td>
                         <td class="robot-actions-cell">
-                            <div class="action-icon edit-icon">✏️</div>
-                            <div class="action-icon delete-icon">🗑️</div>
+                            <a href="#" class="action-icon edit-icon" title="Edit"><i class="fas fa-edit"></i></a>
+                            <a href="robot-detail.html?slug=spot" class="action-icon view-icon" title="View in Encyclopedia"><i class="fas fa-eye"></i></a>
+                            <a href="#" class="action-icon delete-icon" title="Delete"><i class="fas fa-trash-alt"></i></a>
                         </td>
                     </tr>
                 </tbody>
