--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -844,5 +844,6 @@ The robot is designed to go where wheeled robots cannot, while carrying payloads
             });
         });
     </script>
+    <script src="js/admin-encyclopedia-connector.js"></script>
 </body>
 </html>
