--- a/admin-robot-management.html
+++ b/admin-robot-management.html
@@ -992,5 +992,6 @@
     <script src="js/file-uploader.js"></script>
     <script src="js/robot-admin-connector.js"></script>
     <script src="js/robot-management.js"></script>
+    <script src="js/admin-encyclopedia-connector.js"></script>
 </body>
 </html>
