--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <header>
         <div class="container header-container">
             <a href="index.html">
-                <img src="images/logo.png" alt="Tgen Robotics Hub Logo" class="logo">
+                <img src="images/logo.svg" alt="Tgen Robotics Hub Logo" class="logo">
             </a>
             <nav class="nav-links">
                 <a href="encyclopedia.html">Encyclopedia</a>
