--- a/about.html
+++ b/about.html
@@ -292,6 +292,17 @@
             text-shadow: 0 0 10px var(--primary);
         }
 
+        /* Override the nav-links a::after styles from main.css */
+        .nav-links a::after {
+            display: none;
+        }
+
+        /* Custom styles for the active navigation link */
+        .nav-links a.active {
+            color: var(--primary);
+            font-weight: bold;
+        }
+
         @media (max-width: 768px) {
             .hero h1 {
                 font-size: 3rem;
