Updated encyclopedia.html for consistent header styling and proper content spacing

--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -202,7 +202,7 @@
     </header>
 
     <!-- Main Content -->
-    <section class="section">
+    <section class="section main-content">
         <div class="container">
             <h1 class="section-title">Robotics Encyclopedia</h1>
             <p class="section-subtitle">Explore our comprehensive database of robots from around the world</p>
