--- a/index.html
+++ b/index.html
@@ -438,5 +438,8 @@
         // Initialize homepage when DOM is loaded
         document.addEventListener('DOMContentLoaded', initHomepage);
     </script>
+    <script src="robot-storage-adapter.js"></script>
+    <script src="robot-form-handler.js"></script>
+    <script src="robot-manager-integration.js"></script>
 </body>
 </html>
