--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -409,5 +409,8 @@
             };
         }
     </script>
+    <script src="robot-storage-adapter.js"></script>
+    <script src="robot-form-handler.js"></script>
+    <script src="robot-manager-integration.js"></script>
 </body>
 </html>
