--- a/index.html
+++ b/index.html
@@ -441,5 +441,11 @@
     <script src="robot-storage-adapter.js"></script>
     <script src="robot-form-handler.js"></script>
     <script src="robot-manager-integration.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Initialize robot management
+            initializeRobotManager();
+        });
+    </script>
 </body>
 </html>
