Update admin-form.html to include GitHub storage and media handler scripts

--- a/admin-form.html
+++ b/admin-form.html
@@ -420,9 +420,11 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
+    <!-- Scripts -->
     <script src="js/data.js"></script>
+    <script src="js/github-storage.js"></script>
     <script src="robot-storage-adapter.js"></script>
+    <script src="robot-media-handler.js"></script>
     <script src="js/main.js"></script>
     <script src="js/admin-form.js"></script>
     <script>
