--- a/admin-form.html
+++ b/admin-form.html
@@ -549,6 +549,7 @@
     <!-- Scripts -->
     <script src="js/data.js"></script>
     <script src="js/github-storage.js"></script>
+    <script src="js/admin-upload-handler.js"></script>
     <script src="improved-admin-form.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/main.js"></script>
