Add token-manager.js to index.html

--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
         // Clear again after github-storage.js is loaded
         window.clearExampleRobots();
     </script>
+    <script src="js/token-manager.js"></script>
     <script src="robot-storage-adapter.js"></script>
     <script>
         // Clear again after robot-storage-adapter.js is loaded
